Temp Fix Bug 826979 - jsfriendapi.h conflict with qobjectdefs.h slots defines