js/src/jsfriendapi.h
@@ -7,6 +7,9 @@
 #ifndef jsfriendapi_h___
 #define jsfriendapi_h___
 
+// Define it in order to prevent conflicts with mozilla slots names
+#undef slots
+
 #include "mozilla/GuardObjects.h"
 
 #include "jsclass.h"
